--- a/application/views/scripts/carousel/update.phtml
+++ b/application/views/scripts/carousel/update.phtml
@@ -1,2 +1,3 @@
-<?= $this->form; ?>
+<?= $this->partial('section/form.phtml', array('form' => $this->form) ); ?>
+
 <?= $this->partial('/carousel/row/recommended.phtml');?>
