--- a/application/views/scripts/gallery/row/galleries.phtml
+++ b/application/views/scripts/gallery/row/galleries.phtml
@@ -18,7 +18,7 @@
             <?= $this->partial('/gallery/row/gallery-admin-panel.phtml', array('galleryid' => $r['galleryid'])); ?>
         </div>
 
-        <?= $this->partial('/gallery/bootstrap/clearfix.phtml', array('key' => $key)); ?>
+        <?= $this->partial('/bootstrap/clearfix3.phtml', array('key' => $key)); ?>
 
     <?php ENDFOREACH; ?>
 
