--- a/application/views/scripts/gallery/row/thumbnail-products.phtml
+++ b/application/views/scripts/gallery/row/thumbnail-products.phtml
@@ -14,7 +14,7 @@
                 <?= $this->partial('/product/row/thumbnail.phtml', array('product' => $p)); ?>
             </div>
 
-            <?= $this->partial('/gallery/bootstrap/clearfix.phtml', array('key' => $key)); ?>
+            <?= $this->partial('/bootstrap/clearfix3.phtml', array('key' => $key)); ?>
 
         <?php ENDFOREACH; ?>
 
