--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -42,7 +42,7 @@
 
                     <div class="panel-body">
 
-                        <?= $this->partial('/index/blocks/products.phtml', array('products' => $this->products)); ?>
+                        <?= $this->partial('/product/row/thumbnails.phtml', array('products' => $this->products)); ?>
 
                     </div>
 
