--- a/application/views/scripts/product/row/thumbnail.phtml
+++ b/application/views/scripts/product/row/thumbnail.phtml
@@ -1,10 +1,11 @@
 <?php IF($this->product): ?>
 
     <?php $url= $this->url(array('id' => $this->product['productid']), 'product-display'); ?>
+    <?php $picture = Summers_Snenko::img_src( $this->escape($this->product['pictures'][0])); ?>
 
     <div class="caption text-center">
         <a  class="thumbnail" href="<?= $url ?>">
-            <img src="<?= $this->escape($this->product['picture']) ?>">
+            <img src="<?= $picture ?>">
             <div class="caption"><h4><?= $this->escape($this->product['name'])?></h4></div>
         </a>
     </div>
