--- a/application/views/scripts/product/row/thumbnails.phtml
+++ b/application/views/scripts/product/row/thumbnails.phtml
@@ -2,19 +2,15 @@
 
     <div class="row">
 
-        <?php $dir = Summers_Snenko::getPhotoMdDir(); ?>
 
         <?php FOREACH ($this->products as $key => $p): ?>
 
             <div class="col-sm-6 col-md-4 col-lg-3">
 
-                <?php $p['picture'] = $dir . "/" . $this->escape($p['pictures']); ?>
-
                 <?= $this->partial('/product/row/thumbnail.phtml', array('product' => $p)); ?>
 
-
             </div>
-            <?= $this->partial('/index/bootstrap/clearfix.phtml', array('key' => $key)); ?>
+            <?= $this->partial('/bootstrap/clearfix4.phtml', array('key' => $key)); ?>
 
         <?php ENDFOREACH; ?>
     </div>
