--- a/application/layouts/master.phtml
+++ b/application/layouts/master.phtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
 <html>
 <head>
     <meta charset="utf-8">
@@ -47,10 +47,14 @@
 
     <!-- row 3: footer -->
     <?= $this->partial('master/footer.phtml'); ?>
-<!-- javascript -->
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="/js/bootstrap.min.js" type="text/javascript"></script>
 
+    <!-- javascript -->
+<!--    <script src="http://code.jquery.com/jquery-latest.min.js"></script>-->
+<!--    <script src="/js/bootstrap.min.js" type="text/javascript"></script>-->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
 
