--- a/application/views/scripts/carousel/create.phtml
+++ b/application/views/scripts/carousel/create.phtml
@@ -1,2 +1,2 @@
-<?= $this->form ?>
+<?= $this->partial('section/form.phtml', array('form' => $this->form) ); ?>
 <?= $this->partial('/carousel/row/recommended.phtml');?>
