--- a/application/views/scripts/product/index.phtml
+++ b/application/views/scripts/product/index.phtml
@@ -7,7 +7,8 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <?= $this->partial('/product/row/product-table.phtml', array('products' => $this->products)); ?>
+<?= $this->partial('/product/row/thumbnails.phtml', array('products' => $this->products)); ?>
+<?//= $this->partial('/product/row/product-table.phtml', array('products' => $this->products)); ?>
             </div>
         </div>
     </div>
