--- a/application/views/scripts/bootstrap/clearfix3.phtml
+++ b/application/views/scripts/bootstrap/clearfix3.phtml
@@ -1,4 +1,4 @@
--<?php IF($this->key==1): ?>
+<?php IF($this->key==1): ?>
     <div class="clearfix visible-sm-block"></div>
 <?php ELSEIF($this->key==2): ?>
     <div class="clearfix visible-md-block visible-lg-block"></div>
