--- a/application/views/scripts/product/display.phtml
+++ b/application/views/scripts/product/display.phtml
@@ -50,25 +50,13 @@
         <!--body-->
         <div class="row">
 
-            <!--pictures-->
-            <div class="col-md-6 col-lg-6">
+            <!--panel-->
+            <div class="col-md-6 col-lg-6 col-md-push-6">
 
-                <div class="panel panel-default">
-                    <div class="panel-body">
-
-                        <?= $this->partial('/product/row/pictures.phtml', array('pictures' => $this->product['pictures'])); ?>
-
-                    </div>
-                </div>
-
-            </div>
-
-            <!--right panel-->
-            <div class="col-md-6 col-lg-6">
-
-                <a class="btn btn-primary btn-block" href="#">
+                <a class="btn btn-info btn-block" href="#">
                     <?= $this->translate('connect for bye'); ?>
                 </a>
+                <br>
 
                 <!--link-->
                 <?= $this->partial('/product/row/link.phtml', array('link' => $this->product['url'])); ?>
@@ -78,7 +66,7 @@
 
                 <!--gallerys-->
                 <?php IF($this->product['galleries']): ?>
-                    <div class="panel panel-default">
+                    <div class="panel panel-default visible-lg">
                         <div class="panel-body">
                             <?= $this->partial('/gallery/row/marks.phtml', array('galleries' => $this->product['galleries'])); ?>
                         </div>
@@ -86,6 +74,29 @@
                 <?php ENDIF; ?>
 
             </div>
+
+            <!--pictures-->
+            <div class="col-md-6 col-lg-6 col-md-pull-6">
+
+<!--                <div class="panel panel-default">-->
+<!--                    <div class="panel-body">-->
+                        <?= $this->partial('/product/row/pictures-mozaic.phtml', array('pictures' => $this->product['pictures'])); ?>
+<!--                    </div>-->
+<!--                </div>-->
+
+            </div>
+
+            <div class="col-md-12 hidden-lg">
+                <!--gallerys-->
+                <?php IF($this->product['galleries']): ?>
+                    <div class="panel panel-default hidden-md">
+                        <div class="panel-body">
+                            <?= $this->partial('/gallery/row/marks.phtml', array('galleries' => $this->product['galleries'])); ?>
+                        </div>
+                    </div>
+                <?php ENDIF; ?>
+            </div>
+
         </div>
 
     </div>
