--- a/application/views/scripts/navbar/span.phtml
+++ b/application/views/scripts/navbar/span.phtml
@@ -1,3 +1,3 @@
 <?php if(array_key_exists('span', $this->page)) { ?>
-    <span class="<?= $this->$this->page['span']; ?>" aria-hidden="true"></span>
+    <span class="<?= $this->page['span']; ?>" aria-hidden="true"></span>
 <?php } ?>
